PP-11465 Final corrections